# ofdm

./: FTW-Project-Overview.md  FTW-Tx-Project-Overview.md  README  write_complex_binary.m
ftw_80211_ofdm_tx/: .gitignore  ChangeLog  README  configure  configure.ac
ftw_80211_ofdm_tx/.svn/: all-wcprops  dir-prop-base  entries
ftw_80211_ofdm_tx/.svn/text-base/: AUTHORS.svn-base  Makefile.in.svn-base
ftw_80211_ofdm_tx/autom4te.cache/: output.0  output.1  requests  traces.0
ftw_80211_ofdm_tx/autom4te.cache/.svn/: all-wcprops  entries
ftw_80211_ofdm_tx/autom4te.cache/.svn/text-base/: traces.1.svn-base
ftw_80211_ofdm_tx/config/: Makefile.in
ftw_80211_ofdm_tx/config/.svn/: all-wcprops  entries
ftw_80211_ofdm_tx/doc/.svn/: all-wcprops  entries
ftw_80211_ofdm_tx/doc/.svn/text-base/: Makefile.in.svn-base
ftw_80211_ofdm_tx/src/: Makefile.am  Makefile.in
ftw_80211_ofdm_tx/src/.svn/: all-wcprops  entries
ftw_80211_ofdm_tx/src/examples/: Makefile.am  Makefile.in  ftw_ofdm.py  ftw_ofdm_tx.py  ftw_ofdm_tx_uhd.py  ftw_packet_utils.py  uhd_interface.py
ftw_80211_ofdm_tx/src/examples/.svn/: all-wcprops  entries
ftw_80211_ofdm_tx/src/examples/.svn/text-base/: ftw_packet_utils.py.svn-base
ftw_80211_ofdm_tx/src/ftw/: Makefile.am  Makefile.swig.gen  ftw.i  ftw_crc32.cc  ftw_crc32.h  ftw_ofdm_mapper.h  ftw_ofdm_pilot_cc.cc  ftw_ofdm_pilot_cc.h  ftw_ofdm_preamble.cc  ftw_ofdm_preamble.h  ftw_pnc_frequency_modulator_fc.cc  ftw_pnc_frequency_modulator_fc.h  ftw_pnc_ofdm_pilot_cc.cc  ftw_pnc_ofdm_pilot_cc.h  ftw_pnc_ofdm_preamble.cc  ftw_pnc_ofdm_preamble.h  ftw_pnc_zerogap.cc  ftw_pnc_zerogap.h  ftw_repetition.cc  ftw_repetition.original  ftw_zerogap.h
ftw_80211_ofdm_tx/src/ftw/.svn/: all-wcprops  entries
ftw_80211_ofdm_tx/src/ftw/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  ftw.i.svn-base  ftw_ofdm_cmap_cc.cc.svn-base  ftw_ofdm_cmap_cc.h.svn-base  ftw_ofdm_mapper.cc.svn-base  ftw_repetition.cc.svn-base  ftw_repetition.h.original.svn-base  ftw_repetition.h.svn-base  ftw_zerogap.cc.svn-base
ftw_80211_ofdm_tx/src/matlab/: encode.m  transmit.py
ftw_80211_ofdm_tx/src/matlab/.svn/: all-wcprops  entries
ftw_80211_ofdm_tx/src/matlab/.svn/text-base/: 802.11-2007-Annex-G.8.txt.svn-base  debug.m.svn-base
my_benchmark_ofdm/: benchmark_rx.py  benchmark_tx.py  benchmark_txrx.py  digital_swig.py  ofdm.py  ofdm_packet_utils.py  ofdm_receiver.py  ofdm_sync_pn.py  receive_path.py  transmit_path.py  tx_file_bursts.cpp  uhd_interface.py
my_benchmark_ofdm/utils/: gray_code.pyo  mod_codes.pyo
ofdm.wiki/: FTW.md  Home.md  RawOFDM.md
rawofdm/: .gitignore  AUTHORS  Makefile.am  Makefile.common  NEWS  README  configure.ac  makelinks.sh
rawofdm/examples/: berstats.py  channel.py  ofdm_rx.py  ofdm_rxtx.py  ofdm_tx.py  qam_rx.py  qam_rxtx.py  qam_tx.py  scope.py  snrstats.py  test-ber.sh  test-snr.sh  usrp2.py
rawofdm/src/: Makefile.am
rawofdm/src/lib/: Makefile.am  Makefile.swig.gen  raw.i
rawofdm/src/lib/ofdm/: Makefile.am  raw_ofdm.i  raw_ofdm_demapper.cc  raw_ofdm_demapper.h  raw_ofdm_frame_acquisition.cc  raw_ofdm_frame_acquisition.h  raw_ofdm_mapper.cc  raw_ofdm_mapper.h  raw_ofdm_sampler.cc  raw_ofdm_sampler.h
rawofdm/src/lib/qam/: Makefile.am  raw_conv.cc  raw_conv.h  raw_crc.cc  raw_crc.h  raw_intrlv.cc  raw_intrlv.h  raw_qam.cc  raw_qam.h  raw_qam.i  raw_rs.cc  raw_rs.h  raw_scrambler_bb.cc  raw_scrambler_bb.h
rawofdm/src/lib/rscode/: Makefile.am  decoder.cc  ecc.h  encoder.cc  example.cc  galois.c  galois.h  poly.cc  poly.h
rawofdm/src/lib/spiral/: Makefile.am  config.h  defs.h  example.c  parity.c  spiral-121-91.c  spiral-133-171.c  spiral-133-171.h  spiral.c  viterbi.h  viterbi_common.c  viterbi_generic.c  viterbi_internal.h  viterbi_spiral.c
rawofdm/src/lib/util/: Makefile.am  raw_ber.cc  raw_ber.h  raw_fix_frame.cc  raw_fix_frame.h  raw_peak_detector_fb.cc  raw_peak_detector_fb.h  raw_symbol_avg.cc  raw_symbol_avg.h  raw_util.i
rawofdm/src/python/: Makefile.am  __init__.py  qa_conv.py  qa_intrlv.py  qa_ofdm.py  qa_qam.py  qa_qamconv.py  qa_rs.py  qa_scrambler.py  raw_ofdm_mod.py  raw_ofdm_params.py  raw_ofdm_rx.py  raw_ofdm_sync.py  raw_qam.py  run_tests.in
