###################################
# Copyright 2010 Szymon Jakubczak
#
# RS encoder/decoder

include $(top_srcdir)/Makefile.common

modinclude_HEADERS = \
        ecc.h

noinst_LTLIBRARIES = librscode.la

librscode_la_SOURCES =  \
        encoder.cc \
        decoder.cc \
        poly.cc \
        galois.c

